Posts to DB with valid key
Currently posting to DB and requires a valid key to do so. No settings so everything has to be configured in console.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "flickerstop",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "circular-json": "^0.5.9",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "request": "^2.88.0",
